Some refactoring and add check having oauth12

--- a/diary/templates/incorrect_data.j2
+++ b/diary/templates/incorrect_data.j2
@@ -1,4 +1,4 @@
-⛔️ Похоже, что ты вводишь <b>некорректный логин</b>.<br><br>
+⛔️ Похоже, что ты вводишь <b>некорректный {{ field }}</b>.<br><br>
 
 <i>Перед повторной отправкой, проверьте правильность всех символов.<br>
 Если вы считаете, что это <b>ошибка</b> - напишите разработчику <b>@stupidcabage</b></i>
