Пофикшены проблемы с вылетами авторизации, багами и неправильной отправкой д данных

--- a/diary/templates/incorrect_authorization.j2
+++ b/diary/templates/incorrect_authorization.j2
@@ -4,5 +4,5 @@
 {{ error }}<br><br>
 {% endif %}
 
-<i>Перепроверьте веденные данные или попробуйте позднее.</i>
+<i>Перепроверьте веденные данные и попробуйте снова или позднее.</i><br>
 <i>Если вы считаете, что это <b>ошибка</b> - обратитесь к разработчику @stupidcabage</i>
