Fix bug with emojies

--- a/diary/templates/oauth2.j2
+++ b/diary/templates/oauth2.j2
@@ -1,1 +1,3 @@
-🔐 Введите <b>код двухфакторной аутентификации</b> <i>(SMS / TOTP)</i>
+🔐 Введите <b>код двухфакторной аутентификации</b> <i>(SMS / TOTP)</i><br><br>
+
+<i>У Вас есть три минуты на ввод кода.</i>
