refactoring, add change_user

--- a/diary/templates/signup.j2
+++ b/diary/templates/signup.j2
@@ -1,10 +1,6 @@
-Для регистрации мне понадобятся твои логин и пароль от Гос.Услуг.<br><br>
+🔐 Авторизация в электронный дневник происходит через <b>гос.услуги</b>, привязанные к Вашему аккаунту.<br><br>
 
+Войти необходимо всего один раз для получения данных об аккаунте от дневника.<br><br>
 
-Авторизация происходит всего один раз для того, чтобы мы могли войти в ваш профиль электронного дневника.<br>
-Сразу после первичного входа ты можешь спокойно поменять пароль. На работу бота это не повлияет. <br><br>
-
-
-Почему нам стоит доверять?<br>
-Читайте здесь.
-
+<b>Мы не храним данные ваших паролей и логинов.<br>
+Сразу после этого Вы сможете поменять пароль.</b>
