--- a/diary/templates/success_authorize.j2
+++ b/diary/templates/success_authorize.j2
@@ -1,3 +1,3 @@
-<b>Регистрация прошла  успешно </b><br><br>
+🔓 <b>Успешная авторизация</b>, {{ user }}<br><br>
 
-Пропишите <b>/help</b>, чтобы узнать все возможности бота! 
+Пропишите <b>/help</b>, чтобы узнать все возможности бота!
