--- a/diary/templates/choose_user.j2
+++ b/diary/templates/choose_user.j2
@@ -1,3 +1,5 @@
-🔏 Для продолжения работы бота необходимо выбрать от чьего имени будет производиться работа.
+🔓 <b>Успешная авторизация.</b><br><br>
 
-Для этого воспользуйте командой: /change_user
+Аккаунт принадлежит более чем одному ребенку.<br>
+Перед началом использования бота - выберите от чьего имени будет производиться работа.<br>
+<b>Для этого введите команду /change_user</b>
