add /start command to help menu

--- a/diary/templates/help.j2
+++ b/diary/templates/help.j2
@@ -2,6 +2,7 @@
 
 
 <b>На данный момент доступны данные команды:</b><br>
+/start - Главное меню <br>
 /help - Справка<br>
 /diary <i>{можно указать дату}</i> - Домашнее задание<br>
 /schedule <i>{можно указать дату}</i> - Расписание<br>
