Realese notification version

--- a/diary/templates/notification.j2
+++ b/diary/templates/notification.j2
@@ -1,5 +1,5 @@
-❗️<b>Вам поставили новую отметку:</b>
+❗️<b>Вам поставили новую отметку:</b><br><br>
 
 {% for mark in marks %}
-<b>{{ mark.date }}</b> | {{ mark.subject }}: {{ mark.mark }}
+<b>{{ mark.date }}</b> | {{ mark.subject }}: {{ mark.mark }}<br>
 {% endfor %}
