--- a/diary/templates/notification.j2
+++ b/diary/templates/notification.j2
@@ -1,5 +1,10 @@
-❗️<b>Вам поставили новую отметку:</b><br><br>
+{% if marks|length > 1%}
+📬 <b>Вам поставили новые отметки:</b>
+{% else %}
+📬 <b>Вам поставили новую отметку:</b>
+{% endif %}
+<br><br>
 
 {% for mark in marks %}
-<b>{{ mark.date }}</b> | {{ mark.subject }}: {{ mark.mark }}<br>
+<b>{{ mark.date.strftime('%d.%m') }}</b> | {{ mark.subject }}: {{ mark.mark }}<br>
 {% endfor %}
