fix bug with date

--- a/diary/templates/help.j2
+++ b/diary/templates/help.j2
@@ -9,4 +9,4 @@
 /marks - Выписка оценок<br><br>
 
 <i>Возникли какие-то проблемы? Есть жалобы, вопросы или предложения?<br>
-Обращайтесь к разработчику - @stupidcabbage</i>
+Обращайтесь к разработчику - @stupidcabage</i>
