Изменил template notification. Теперь показывает кол-во новых оценок.

--- a/diary/templates/notification.j2
+++ b/diary/templates/notification.j2
@@ -1,7 +1,9 @@
-{% if marks|length > 1%}
-📬 <b>Вам поставили новые отметки:</b>
+{% if 0 < marks|length < 2 %}
+📬 <b>Вам поставили {{ marks|length }} новую оценку:</b>
+{% elif 1 < marks|length < 5 %}
+📬 <b>Вам поставили {{ marks|length }} новые оценки:</b>
 {% else %}
-📬 <b>Вам поставили новую отметку:</b>
+📬 <b>Вам поставили {{ marks|length }} новых оценок:</b>
 {% endif %}
 <br><br>
 
